# vibecoding-templates

./: .prototools
advanced-typescript-effect/.ruler/: any-inside-generic-functions.md  api-client-patterns.mdc  api-client-testing.mdc  code-style.mdc  configuration-management.md  cursor-rule-maintainer.mdc  decision-trees.md  development-workflow.md  discriminated-unions.md  effect-handler-patterns.mdc  effect-service-architecture.mdc  effect-store-patterns.mdc  effect-testing-patterns.mdc  effect-usecase-patterns.mdc  imports-and-conventions.md  logging-and-observability.md  mcp-rules.md  mcp.json  performance-patterns.md  project-conventions.md  restate-patterns.md  schema-validation.mdc
n8n/.ruler/: mcp.json  system-prompt.md
python/: .gitignore  .pre-commit-config.yaml  product_requirements_document.md  pyproject.toml
python/.ruler/: language-conventions.md  mcp.json
python/rules/: language-conventions.md
universal/: mcp.json
universal/.ruler/: mcp.json
